[gd_scene load_steps=8 format=3 uid="uid://dq50x2oqd8j0"]

[ext_resource type="Script" path="res://scenes/wind.gd" id="1_odmow"]
[ext_resource type="Texture2D" uid="uid://dfd1qpw8u3ily" path="res://texture/vent.png" id="2_0l8vr"]
[ext_resource type="Texture2D" uid="uid://bd5046ve622r2" path="res://texture/boutton3.png" id="3_fku7t"]
[ext_resource type="Texture2D" uid="uid://sgas16e4tsqg" path="res://texture/boutton2.png" id="4_t35kv"]
[ext_resource type="Texture2D" uid="uid://dsb2jnk3rjgai" path="res://texture/boutton4.png" id="5_k4mij"]
[ext_resource type="Texture2D" uid="uid://b3lt5ba66hvyb" path="res://texture/bouton.png" id="6_h7sxv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c3ds6"]
resource_local_to_scene = true
size = Vector2(128, 128)

[node name="wind" type="Area2D"]
script = ExtResource("1_odmow")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(64, 64)
shape = SubResource("RectangleShape2D_c3ds6")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.47451)
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("2_0l8vr")
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 128.0
offset_bottom = 128.0
color = Color(0, 0.996078, 0.513726, 0.0705882)

[node name="tl" type="Button" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
pivot_offset = Vector2(20, 20)
icon = ExtResource("3_fku7t")
icon_alignment = 1

[node name="tr" type="Button" parent="."]
offset_left = 108.0
offset_top = -19.0
offset_right = 148.0
offset_bottom = 21.0
pivot_offset = Vector2(20, 19)
icon = ExtResource("4_t35kv")
icon_alignment = 1

[node name="bl" type="Button" parent="."]
offset_left = -20.0
offset_top = 108.0
offset_right = 20.0
offset_bottom = 148.0
pivot_offset = Vector2(20, 20)
icon = ExtResource("4_t35kv")
icon_alignment = 1

[node name="br" type="Button" parent="."]
offset_left = 108.0
offset_top = 108.0
offset_right = 148.0
offset_bottom = 148.0
pivot_offset = Vector2(20, 20)
icon = ExtResource("3_fku7t")
icon_alignment = 1

[node name="set_speed" type="Button" parent="."]
offset_left = 108.0
offset_top = 40.0
offset_right = 148.0
offset_bottom = 80.0
theme_override_colors/icon_normal_color = Color(1, 0, 0.415686, 1)
theme_override_colors/icon_pressed_color = Color(1, 0, 0.415686, 1)
theme_override_colors/icon_hover_color = Color(1, 0, 0.415686, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 0, 0.415686, 1)
theme_override_colors/icon_focus_color = Color(1, 0, 0.415686, 1)
icon = ExtResource("5_k4mij")

[node name="move" type="Button" parent="."]
offset_left = 47.0
offset_top = 40.0
offset_right = 87.0
offset_bottom = 80.0
icon = ExtResource("6_h7sxv")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="button_down" from="tl" to="." method="_on_tl_button_down"]
[connection signal="button_up" from="tl" to="." method="_on_tl_button_up"]
[connection signal="button_down" from="tr" to="." method="_on_tr_button_down"]
[connection signal="button_up" from="tr" to="." method="_on_tr_button_up"]
[connection signal="button_down" from="bl" to="." method="_on_bl_button_down"]
[connection signal="button_up" from="bl" to="." method="_on_bl_button_up"]
[connection signal="button_down" from="br" to="." method="_on_br_button_down"]
[connection signal="button_up" from="br" to="." method="_on_br_button_up"]
[connection signal="button_up" from="set_speed" to="." method="_on_set_speed_button_up"]
[connection signal="button_down" from="move" to="." method="_on_move_button_down"]
[connection signal="button_up" from="move" to="." method="_on_move_button_up"]
[connection signal="gui_input" from="move" to="." method="_on_move_gui_input"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
